--- a/_includes/head.html
+++ b/_includes/head.html
@@ -77,10 +77,10 @@
   
  <link href="//site-assets.fontawesome.com/releases/v6.1.1/css/all.css" rel="stylesheet"> 
  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
+	<link rel="stylesheet" href="https://www.allpree.com/css/main.css">
   <!--   Syntax highlighting is only needed for posts -->
   {% if page.layout == 'post' %}
-  <link rel="stylesheet" href="{{site.baseurl}}/css/syntax-highlighter.css">
+  <link rel="stylesheet" href="https://www.allpree.com/css/syntax-highlighter.css">
   {% endif %}
   <link href="//fonts.googleapis.com/css?family=Space+Mono|Work+Sans:700" rel="stylesheet">
 
