--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -16,19 +16,19 @@
                
               <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLScdGFiZGrlD2-m4x69SXzMWnhQTY4NdlDsCdWunKVRZmm99tg/formResponse" id="wj-form" method="post" onsubmit="submitted=true" target="hidden_iframe">
                       <input class="form-control" name="entry.828595295" type="hidden" value="ID 78484">
-                     <input class="form-control" name="entry.701237804" type="hidden" value="-">
+                     <input class="form-control" name="entry.701237804" type="hidden" value=" ">
                           <input class="form-control" name="entry.1877946077" type="hidden" value="78484" >
                           
                           <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
                      <div class="icon_box country-icon"></div>
-                    <select name="entry.573106087"  class="crs-country"  data-default-value=""  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
+                    <select name="entry.573106087"  class="crs-country"  data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
                      
                 </div></div>
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
                      <div class="icon_box location"></div>
-                    <select name="entry.1077353202" id="six" data-default-value=""></select>
+                    <select name="entry.1077353202" id="six" data-default-value="Kingston"></select>
                 </div></div>
                           
                             
@@ -116,7 +116,7 @@
                           <div class="col-md-6"> 
                               <div id="box-phone" class="one_of_the_boxes">
     <div class="icon_box phone"></div>
-  <input autocomplete="off" tabindex="4" type="tel" class="form-input" id="phone" name="entry.538648952" placeholder="Find WhatsApp # (c/Flag)" data-parsley-trigger="focusout" data-parsley-minlength="9" data-parsley-required required>
+  <input autocomplete="off" tabindex="4" type="tel" class="form-input" id="phone" name="entry.538648952" placeholder="Find # (c/Flag)" data-parsley-trigger="focusout" data-parsley-minlength="9" data-parsley-required required>
         </div> </div>
                           
              
