--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -154,7 +154,7 @@
                             
                 <div class="col-md-6">
                         <div class="home-left">
-                     <div class="image-cont2"></div>
+                     <div class="image-cont"></div>
                     </div>
                 </div>
             </div>
