--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -8,8 +8,8 @@
                            
                                
                          <div class="home-exp">
-                                     <h2>Add Your Contacts</h2>
-<p>Please take 30 seconds to add your info to our phone below. Details entered will show up instantly. and this will allow you to start seeing our status on the next post</p>
+                                     <h3>Register Your Free Account</h3>
+<p>Please take 30 seconds to register youe free account below. Details entered will allow you to start seeing our status on the next post</p>
                                    
                                <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='{{site.baseurl}}/thankyou/';}"></iframe>
