--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -9,7 +9,7 @@
                                
                          <div class="home-exp">
                                      <h3>Register Your Free Account</h3>
-<p>Please take 30 seconds to register youe free account below. Details entered will allow you to start seeing our status on the next post</p>
+<p>Please take 30 seconds to register your free account below. Details entered will allow you to start seeing our status on the next post</p>
                                    
                                <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='{{site.baseurl}}/thankyou/';}"></iframe>
@@ -136,7 +136,16 @@
                
                 </form> 
             
-
+<script>
+var input = document.querySelector("#phone");
+window.intlTelInput(input, {
+  onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk",
+  "ee", "fo", "fi", "fr", "de", "gi", "gr", "va", "hu", "is", "ie", "it", "lv",
+  "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "ro",
+  "ru", "sm", "rs", "sk", "si", "es", "se", "ch", "ua", "gb"],
+  utilsScript: "https://www.watsapp.tv/js/utils.js" // just for formatting/placeholders etc
+});
+</script>
 
 
   <script src="https://www.watsapp.tv/js/crs.min.js"></script>
