--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -136,16 +136,6 @@
                
                 </form> 
             
-<script>
-var input = document.querySelector("#phone");
-window.intlTelInput(input, {
-  onlyCountries: ["al", "ad", "at", "by", "be", "ba", "bg", "hr", "cz", "dk",
-  "ee", "fo", "fi", "fr", "de", "gi", "gr", "va", "hu", "is", "ie", "it", "lv",
-  "li", "lt", "lu", "mk", "mt", "md", "mc", "me", "nl", "no", "pl", "pt", "ro",
-  "ru", "sm", "rs", "sk", "si", "es", "se", "ch", "ua", "gb"],
-  utilsScript: "https://www.watsapp.tv/js/utils.js" // just for formatting/placeholders etc
-});
-</script>
 
 
   <script src="https://www.watsapp.tv/js/crs.min.js"></script>
@@ -154,7 +144,7 @@ window.intlTelInput(input, {
     <link rel="stylesheet" type="text/css" href="https://www.watsapp.tv/css/intlTelInput.css" />
     <script type="text/javascript" src="https://www.watsapp.tv/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://www.watsapp.tv/js/intlTelInput.min.js"></script>
-    
+    <script src="https://www.watsapp.tv/js/intlTel.js"></script>
 
                                 
                             </div>
