--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -144,7 +144,7 @@
     <link rel="stylesheet" type="text/css" href="https://www.watsapp.tv/css/intlTelInput.css" />
     <script type="text/javascript" src="https://www.watsapp.tv/js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="https://www.watsapp.tv/jm/js/intlTelInput.min.js"></script>
-    <script src="https://www.watsapp.tv/js/intlTel.js"></script>
+    <script src="https://www.watsapp.tv/jm/js/intlTel.js"></script>
 
                                 
                             </div>
