--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -140,11 +140,11 @@
 
   <script src="https://www.watsapp.tv/js/crs.min.js"></script>
      
-    <link rel="stylesheet" type="text/css" href="https://www.watsapp.tv/css/whatsapp.css" />
-    <link rel="stylesheet" type="text/css" href="https://www.watsapp.tv/css/intlTelInput.css" />
-    <script type="text/javascript" src="https://www.watsapp.tv/js/jquery-3.3.1.min.js"></script>
-    <script type="text/javascript" src="https://www.watsapp.tv/jm/js/intlTelInput.min.js"></script>
-    <script src="https://www.watsapp.tv/jm/js/intlTel.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://www.allpree.com/css/whatsapp.css" />
+    <link rel="stylesheet" type="text/css" href="https://www.allpree.com/css/intlTelInput.css" />
+    <script type="text/javascript" src="https://www.allpree.com/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://www.allpree.com/jm/js/intlTelInput.min.js"></script>
+    <script src="https://www.allpree.com/js/intlTel.js"></script>
 
                                 
                             </div>
