--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -116,7 +116,7 @@
                           <div class="col-md-6"> 
                               <div id="box-phone" class="one_of_the_boxes">
     <div class="icon_box phone"></div>
-  <input autocomplete="off" tabindex="4" type="tel" class="form-input" id="phone" name="entry.538648952" placeholder="Find # (c/Flag)" data-parsley-trigger="focusout" data-parsley-minlength="9" data-parsley-required required>
+  <input autocomplete="off" tabindex="4" type="tel" class="form-input" id="phone" name="entry.538648952" placeholder="Type <i class="fa-brands fa-whatsapp"></i> #" data-parsley-trigger="focusout" data-parsley-minlength="9" data-parsley-required required>
         </div> </div>
                           
              
