--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -28,7 +28,7 @@
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
                      <div class="icon_box location"></div>
-                    <select name="entry.1077353202" id="six" data-default-value="Kingston"></select>
+                    <select name="entry.1077353202" id="six" data-default-value=""></select>
                 </div></div>
                           
                             
