--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -16,7 +16,7 @@
                
               <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfw0Sts9wFjaExeOLWxUGAhdrEbfMEE2n6kh430bFqb0xKO2w/formResponse" id="wj-form" method="post" onsubmit="submitted=true" target="hidden_iframe">
                       <input class="form-control" name="entry.1092645840" type="hidden" value="ID 78484">
-                     <input class="form-control" name="entry.297851038" type="hidden" value="-">
+                     <input class="form-control" name="entry.297851038" type="hidden" value="">
                           <input class="form-control" name="entry.2034350499" type="hidden" value="78484" >
                           
                           <div class="col-md-6"> 
