--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,13 +1,17 @@
- <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+<nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                    <!--<span class="sr-only">Toggle navigation</span> Menu <i class="fa-solid fa-bars"></i>-->
                 </button>
-             <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-bullhorn"></i>&nbsp;Promotions</a>
-             <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-sack-dollar"></i>&nbsp;GiveAway</a>
-             <!--<a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-graduation-cap"></i>&nbsp;Courses</a>-->
+            
+            
+            <!--  <a class="navbar-brand page-scroll">&nbsp;<strong>Allpree Plus <i class="fa-solid fa-location-plus"></i></strong></a>
+             <a class="navbar-brand page-scroll" href=""><strong><i class="fa-brands fa-whatsapp"></i> eCom <i class="fa-brands fa-btc"></i></strong> - Semi Done For You </a> 
+             	  <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-sack-dollar"></i>&nbsp;Investors</a>
+              <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-sack-dollar"></i>&nbsp;Resellers</a>
+             <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-sack-dollar"></i>&nbsp;Referrals</a> -->
               
              
              
@@ -31,7 +35,6 @@
                     <li>
                         <a class="page-scroll" href="#location">Location</a>
                     </li>   
-
                     <li>
                         <a class="page-scroll" href="#signup">Sign Up</a>
                     </li>
