--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,7 +11,7 @@
                                 
 				       <h2><strong>Browse Our Status Daily</strong></h2>
 				       
-				      <h3>Discover Products In Various Categories From Local & Overseas Retailers That Offer The Best Discount Without You Every Leaving WhatsApp</h3>
+				      <h3>Discover Hand-Picked Products In Various Categories From Local & Overseas Retailers That Offer Up To 80% Crazy Discount Without You Every Leaving WhatsApp</h3>
 					
 				      <h4>When You Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
 		        
