--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -15,9 +15,9 @@
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {window.location='{{site.baseurl}}/thankyou/';}"></iframe>
                
               <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfw0Sts9wFjaExeOLWxUGAhdrEbfMEE2n6kh430bFqb0xKO2w/formResponse" id="wj-form" method="post" onsubmit="submitted=true" target="hidden_iframe">
-                      <input class="form-control" name="entry.1092645840" type="hidden" value="ID A388460">
+                      <input class="form-control" name="entry.1092645840" type="hidden" value="ID J388460">
                      <input class="form-control" name="entry.297851038" type="hidden" value="">
-                          <input class="form-control" name="entry.2034350499" type="hidden" value="A388460" >
+                          <input class="form-control" name="entry.2034350499" type="hidden" value="J388460" >
                           
                           <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
