--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -2,7 +2,7 @@
 
 <p><b>Congratulations!</b> You are now a member</p>
 
-
+<!--
  <br><br>Once You Download & Save Our Number, it will allow you to start seeing our <i class="fa fa-whatsapp"></i> Status on the next post, Follow the instruction below to save our mobile number
                            <br><br>
                            <a href="https://www.watsapp.tv/watsapptv.vcf" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><strong><i class="fa fa-android"></i><i class="fa fa-apple"></i> Virtual Contact Card</strong></button></a>
@@ -23,7 +23,7 @@
                           &nbsp;&nbsp;&nbsp;<b>²:</b> Find status privacy.<br>
                           &nbsp;&nbsp;&nbsp;<b>³:</b> Click on 'My contacts except...'<br>
                           &nbsp;&nbsp;&nbsp;<b>⁴:</b> Search For 'WatsApp'<br> 
-                          &nbsp;&nbsp;&nbsp;<b>⁵:</b> Select all 3 contacts under our name.<br>
+                          &nbsp;&nbsp;&nbsp;<b>⁵:</b> Select all 3 contacts under our name.<br>-->
                           
                         
 
