--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -23,12 +23,12 @@
                           &nbsp;&nbsp;&nbsp;<b>²:</b> Find status privacy.<br>
                           &nbsp;&nbsp;&nbsp;<b>³:</b> Click on 'My contacts except...'<br>
                           &nbsp;&nbsp;&nbsp;<b>⁴:</b> Search For 'WatsApp'<br> 
-                          &nbsp;&nbsp;&nbsp;<b>⁵:</b> Select all 3 contacts under our name.<br>-->
+                          &nbsp;&nbsp;&nbsp;<b>⁵:</b> Select all 3 contacts under our name.<br>
                           
                         
 
 <br><br>
-                          <b>Note:</b> If you cant see our status within 2 hours from now, that mean you miss some of the information on the form when you where signing up
+                          <b>Note:</b> If you cant see our status within 2 hours from now, that mean you miss some of the information on the form when you where signing up-->
                             <br><br>
 
 <p>Before you go, You have one final step, Click on the WhatsApp button below and send us the generated message.
