--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -31,7 +31,7 @@
                           <b>Note:</b> If you cant see our status within 2 hours from now, that mean you miss some of the information on the form when you where signing up-->
                             <br><br>
 
-<p>Before you go, You have one final step, Click on the WhatsApp button below and send us the generated message.
+<p>Before you go, You have one final step, Click on the WhatsApp button below and send our virtual assistant the generated message.
 
   <br> <br>
                                       <a href="https://api.whatsapp.com/send?phone={{site.tell}}&text=Just sign up" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><strong><i class="fa fa-whatsapp"></i> WhatsApp Button</strong></button></a>
