--- a/_includes/addcontacts.html
+++ b/_includes/addcontacts.html
@@ -156,6 +156,9 @@
                      <div class="image-cont"></div>
                     </div>
                 </div>
-            
+            </div>
+            </div>
+ </div>
+            </div>
           
 </header>
