--- a/_includes/thankyou.html
+++ b/_includes/thankyou.html
@@ -29,9 +29,9 @@
 
 <br><br>
                           <b>Note:</b> If you cant see our status within 2 hours from now, that mean you miss some of the information on the form when you where signing up-->
-                            <br><br>
+                            <br>
 
-<p>Before you go, You have one final step, Click on the WhatsApp button below and send our virtual assistant the generated message.
+<p>Before you go, You have one final step, Click on the WhatsApp button below and send our virtual assistant the generated message and look within 2 - 72 hours from now a whatsapp message for instruction on what to do next to be able to see our <i class="fa fa-whatsapp"></i> Status
 
   <br> <br>
                                       <a href="https://api.whatsapp.com/send?phone={{site.tell}}&text=Just sign up" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><strong><i class="fa fa-whatsapp"></i> WhatsApp Button</strong></button></a>
