--- a/_includes/addrefcontacts.html
+++ b/_includes/addrefcontacts.html
@@ -17,13 +17,13 @@
               <form action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSfw0Sts9wFjaExeOLWxUGAhdrEbfMEE2n6kh430bFqb0xKO2w/formResponse" id="wj-form" method="post" onsubmit="submitted=true" target="hidden_iframe">
                       <input class="form-control" name="entry.1092645840" type="hidden" value="ID J388460">
                      <input class="form-control" name="entry.297851038" type="hidden" value="">
-                          <input class="form-control" name="entry.2034350499" type="hidden" value="J388460" >
                           
-                          <div class="col-md-6"> 
-                   <div class="one_of_the_boxes">
-                     <div class="icon_box country-icon"></div>
-                    <select name="entry.1890405601"  class="crs-country"  type="hidden" data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
+                          <select name="entry.1890405601"  class="crs-country"  type="hidden" data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
                      
+                          <div class="col-md-6">
+                              <div id="box-fullname" class="one_of_the_boxes">
+                                          <div class="icon_box person"></div>
+                    <input class="form-input" name="entry.2034350499"  value="J388460" placeholder="Email Address" type="text" required >
                 </div></div>
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
@@ -94,7 +94,8 @@
                         </div>
                           
                           <div class="col-md-6">
-                              <div id="box-fullname" class="one_of_the_boxes"><div class="icon_box person"></div>
+                              <div id="box-fullname" class="one_of_the_boxes">
+                                          <div class="icon_box person"></div>
                     <input id="fullname"  name="entry.1502543154"  class="form-input" type="text" placeholder="First Name" autocapitalize="words" onkeyup="fullnameKeyUp(this.value)" required>
                 </div>
                             
