--- a/_includes/addrefcontacts.html
+++ b/_includes/addrefcontacts.html
@@ -18,12 +18,12 @@
                       <input class="form-control" name="entry.1092645840" type="hidden" value="ID J388460">
                      <input class="form-control" name="entry.297851038" type="hidden" value="">
                           
-                          <select name="entry.1890405601"  class="crs-country"  type="hidden" data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
+                          <input name="entry.1890405601"  class="crs-country"  type="hidden" data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six">
                      
                           <div class="col-md-6">
                               <div id="box-fullname" class="one_of_the_boxes">
                                           <div class="icon_box person"></div>
-                    <input class="form-input" name="entry.2034350499"  value="J388460" placeholder="Email Address" type="text" required >
+                    <input class="form-input" name="entry.2034350499"  placeholder="Referral Code" type="text" required >
                 </div></div>
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
