--- a/_includes/addrefcontacts.html
+++ b/_includes/addrefcontacts.html
@@ -28,7 +28,7 @@
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
                      <div class="icon_box location"></div>
-                    <select name="entry.341957417" id="six" data-default-value=""></select>
+                    <select class="crs-country" name="entry.341957417" id="six" data-default-value=""></select>
                 </div></div>
                           
                             
