--- a/_includes/addrefcontacts.html
+++ b/_includes/addrefcontacts.html
@@ -18,7 +18,7 @@
                       <input class="form-control" name="entry.1092645840" type="hidden" value="ID J388460">
                      <input class="form-control" name="entry.297851038" type="hidden" value="">
                           
-                          <input name="entry.1890405601"  class="crs-country"  type="hidden" data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six">
+                          <select hidden="hidden" name="entry.1890405601"  class="crs-country"  data-default-value="Jamaica"  data-blacklist="CD,CG,SH,GS" data-region-id="six"></select>
                      
                           <div class="col-md-6">
                               <div id="box-fullname" class="one_of_the_boxes">
@@ -28,7 +28,7 @@
                      <div class="col-md-6"> 
                    <div class="one_of_the_boxes">
                      <div class="icon_box location"></div>
-                    <select class="crs-country" name="entry.341957417" id="six" data-default-value=""></select>
+                    <select name="entry.341957417" id="six" data-default-value=""></select>
                 </div></div>
                           
                             
