--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -17,7 +17,7 @@
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
-                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/code" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
+                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
 				      <!-- <small class="block"><b>NOTE:</b> If You Purchase A Yearly Membership You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
