--- a/_includes/addrefcontacts.html
+++ b/_includes/addrefcontacts.html
@@ -22,7 +22,7 @@
                      
                           <div class="col-md-6">
                               <div id="box-fullname" class="one_of_the_boxes">
-                                          <div class="icon_box person"></div>
+                                          <div class="icon_box referral"></div>
                     <input class="form-input" name="entry.2034350499"  placeholder="Referral Code" type="text" required >
                 </div></div>
                      <div class="col-md-6"> 
