--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,6 +7,8 @@
                 </button>
             
             <a class="navbar-brand page-scroll" onclick="history.back()"><i class="fa-solid fa-backward"></i>&nbsp;<strong>Back</strong> </a>
+            <a class="navbar-brand page-scroll" href=""><strong><i class="fa-solid fa-handshake-simple"></i>&nbsp;Community Agent</strong></a>
+                       
             <!--  <a class="navbar-brand page-scroll">&nbsp;<strong>Allpree Plus <i class="fa-solid fa-location-plus"></i></strong></a>
              <a class="navbar-brand page-scroll" href=""><strong><i class="fa-brands fa-whatsapp"></i> eCom <i class="fa-brands fa-btc"></i></strong> - Semi Done For You </a> 
              	  <a class="navbar-brand page-scroll" href=""><i class="fa-solid fa-sack-dollar"></i>&nbsp;Investors</a>
