--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,9 +11,9 @@
                                 
 				       <h2><strong>Browse Our Status Daily</strong></h2>
 				       
-				      <h3>Discover Hand-Picked Products In Various Categories From Our Overseas Supplier That Offer Up To 80% Discount Of The Suggested Retail Price Without You Every Leaving WhatsApp</h3>
+				      <h3>Pree Hand-Picked Products In Various Categories From Our Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us The Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
+				      <h4>When You Ready To Make A Purchase, Accept Retailers Discount Or Become A Paid Member And We'll Pass On 70% Of Our Commission For You To Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
