--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -9,11 +9,11 @@
                                <div class="home-exp">
 			   <p style=""><strong>Join The Biggest Retail Platform On WhatsApp</strong></p>
                                 
-				       <h2><strong>Browse Our Status Daily</strong></h2>
+				       <h2><strong>Pree Our Status Daily</strong></h2>
 				       
-				      <h3>Pree Hand-Picked Products In Various Categories From Our Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us The Commission On Your Purchase</h3>
+				      <h3>Discover Products In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Accept Retailers Discount Or Become A Paid Member And We'll Pass On 70% Of Our Commission For You To Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
+				      <h4>When You Ready To Make A Purchase, Accept Discount Price Or Become A Paid Member And We'll Pass On 70% Of Our Commission For You To Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
