--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -9,7 +9,7 @@
                                <div class="home-exp">
 			   <p style=""><strong>Join The Biggest Retail Platform On WhatsApp</strong></p>
                                 
-				       <h2><strong>Pree Our Status Daily</strong></h2>
+				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
 				      <h3>Discover Products In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
 					
