--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,7 +13,7 @@
 				       
 				      <h3>Discover Products In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Accept Discount Price Or Become A Paid Member And We'll Pass On 70% Of Our Commission For You To Get The Best Deal + FREE Delivery On All Purchases Within That Year</h4>    
+				      <h4>When You Ready To Make A Purchase, Accept Free Members Price Or Become A Paid Member And We'll Pass On 90% Of Our Commission For You To Get The Best Deal + 10% Goes To The Person That Invited You</h4>    
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
