--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,13 +7,13 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			   <p style=""><strong>Join The Biggest Retail Platform On WhatsApp</strong></p>
+			   <p style=""><strong>Join The Biggest Deals Platform On WhatsApp</strong></p>
                                 
 				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
-				      <h3>Discover Products In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Retail Price and Pay Us The Highest Commission On Your Purchase</h3>
+				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Retail Price and Pay Us The Highest Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Find Nearest Agent.  Accept Free Members Price Or Become A Paid Member And We'll Pass On 90% Of Our Commission For You To Get The Best Deal + 10% Goes To The Person That Invited You</h4>    
+				      <h4>When You Ready To Make A Purchase,  Accept Free Members Price Or Become A Paid Member And We'll Pass On 90% Of Our Commission, For You To Get The Best Deal + The Other 10% Goes To The Person That Invited You</h4>    
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
