--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,7 +7,7 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			   <p style=""><strong>Join The Biggest Deals Platform On WhatsApp</strong></p>
+			   <p style=""><strong>Join The Biggest Deals Site On WhatsApp</strong></p>
                                 
 				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
