--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,7 +11,7 @@
                                 
 				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
-				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 60% Discount Of The Retail Price and Pay Us The Commission On Your Purchase</h3>
+				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 60% Discount Of The Retail Price and Pay Us Commission On Your Purchase</h3>
 					
 				      <h4>When You Ready To Make A Purchase, Accept Free Members Price Or Upgrade Your Membership And We'll Pass On 80% Of Our Commission, For You To Get The Best Deal + The Other 10% Goes To The Person That Invited You</h4>    
 		        
