--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,7 +13,7 @@
 				       
 				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 50% Discount Of The Retail Price and Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Accept Free Members Price Or Upgrade Your Membership And We'll Pass On 100% Of Our Commission, For You To Get The Best Deal</h4>    
+				      <h4>When You Ready To Make A Purchase, Accept Free Membership Price Or Upgrade Your Membership And We'll Pass On 100% Of Our Commission, For You To Get The Best Deal</h4>    
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
