--- a/_includes/code.html
+++ b/_includes/code.html
@@ -82,7 +82,7 @@ input[type=text]:focus {
         resultsContainer: document.getElementById('results-container'),
         json: '/search.json',
         searchResultTemplate: '<h4><a href="{url}">{title} Invite You To</a></h4> {snippet} - {date}',
-        noResultsText: 'Results not found!',
+        noResultsText: 'No Agent Found!',
         limit: 1,
         fuzzy: false,
         exclude: ['welcome']
