--- a/_includes/code.html
+++ b/_includes/code.html
@@ -60,7 +60,7 @@ input[type=text]:focus {
 <br><br>
 <div class="demo-wrapper">
 	<center><a class="back-to-home" href="/"><img src="{{ site.url }}/img/{{ site.logo }}" alt="{{ site.title }}" width="70" height="70"></a></center>
-	<center><h1>Find The Closest Agent Near You</h1></center>
+	<center><h1>Find Closest Agent Near You</h1></center>
 	<center><h5>Enter Your Community Or Agent Code Below</h5></center>
 <div id="search-container">
 <input type="text" id="search-input" placeholder="Search by community or agent code">
