--- a/_includes/code.html
+++ b/_includes/code.html
@@ -60,10 +60,10 @@ input[type=text]:focus {
 <br><br>
 <div class="demo-wrapper">
 	<center><a class="back-to-home" href="/"><img src="{{ site.url }}/img/{{ site.logo }}" alt="{{ site.title }}" width="70" height="70"></a></center>
-	<center><h1>Find Agent</h1></center>
-	<center><h5>Enter Your Community Or Agent Code Below</h5></center>
+	<center><h1>Pick Up Points</h1></center>
+	<center><h5>Enter Your Community Or Pickup Code Below</h5></center>
 <div id="search-container">
-<input type="text" id="search-input" placeholder="Search by community or agent code">
+<input type="text" id="search-input" placeholder="Search by community or code">
 	<ul id="results-container"></ul>
 </div>
 </div>
