--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,9 +11,9 @@
                                 
 				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
-				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 80% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
+				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 60% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>When You Ready To Make A Purchase, Accept Free Membership Price Or Upgrade Your Membership And We'll Pass On 100% Of Our Commission, For You To Get The Best Deal</h4>    
+				      <h4>Pre-Order By Accept Retailer Discount Offer Or Upgrade Your Membership And We'll Pass On 100% Of Our Commission, For You To Get The Highest Discount</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
