--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,14 +13,14 @@
 				       
 				      <h3>Discover Deals In Various Categories From Overseas Retailers That Offer Up To 60% Discount Of The Suggested Retail Price and Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Pre-Order By Accept Retailer Discount Offer Or Upgrade Your Membership And We'll Pass On 100% Of Our Commission, For You To Get The Highest Discount</h4>     
+				      <h4>Pre-Order By Accept Retailer Discount Offer Or Upgrade Your Membership And We'll Pass On 80% Of Our Commission, For You To Get The Highest Discount</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
-				       <small class="block"><b>HOW WE MAKE MONEY:</b> Your yearly membership fee goes into special forex trading account that generates a returns that enable us to covering our overheads and make a profit</small> 
+				       <small class="block"><b>HOW YOU EARN:</b> 50% of yearly membership fee goes into special forex trading account that generates a monthly returns that goes into your wallet as credit that enable you to cover upto 100% of customs</small>  
                                   
 				      <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
 				       
