--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -20,7 +20,7 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
-				       <small class="block"><b>HOW YOU EARN:</b> Purchase a yearly membership and we'll put 50% into special forex trading account that generates a monthly returns that goes into your wallet as credit that enable you to cover upto 100% of your total order</small>  
+				       <small class="block"><b>HOW YOU EARN:</b> Purchase a yearly membership. 50% goes into special forex trading account that generates a monthly returns for us. We'll share 50% of our profit that goes into your wallet as shopping credit that enable you to cover upto 100% of your total order</small>  
                                   
 				      <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
 				       
