--- a/_includes/benefits.html
+++ b/_includes/benefits.html
@@ -1,9 +1,9 @@
 <section id="benefits" class="benefits bg-primary text-center">
         <div class="container">
             <div class="row">
-               <h2>What To Expect</h2>
+               <h3>HOW YOU EARN</h3>
               <div class="col-md-8 col-md-offset-2">
-               <p>Testing .....</p>
+               <p>Purchase a yearly membership. 50% goes into special forex trading account that generates a monthly returns for us. We'll share 50% of our profit that goes into your wallet as shopping credit that enable you to cover upto 100% of your total order</p>
                </div>
                <div class="row"></div>
                <div class="col-md-4">
