--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -11,9 +11,9 @@
                                 
 				       <h2><strong>Pree Our <i class="fa-brands fa-whatsapp"></i> Status Daily</strong></h2>
 				       
-				      <h3>Discover Greatly Discounted Deals In Various Categories From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
+				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Pre-Order By Accepting The Retail Discount Offer Or Upgrade Your Membership And We'll Pass On Portion Of Our Commission To Create Even More Discounts</h4>     
+				      <h4>Pre-Order By Accepting The Discount Offer Or Upgrade Your Membership And We'll Pass On Portion Of Our Commission To Create Even More Discounts</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
