--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,16 +13,16 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Pre-Order By Accepting The Discount Offer Or Upgrade Your Membership And We'll Pass On Portion Of Our Commission To Create Even More Discounts</h4>     
+				      <h4>Purchase A Yearly Membership And We'll Pass On Portion Of Our Commission To Create Even More Discounts</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
-				       <small class="block"><b>Earn Shopping Credit:</b> Purchase a yearly membership. 50% goes into special trading account that generates a monthly returns for us. We'll share 50% of our profit with you that goes into your wallet as shopping credit that enable you to cover upto 100% of your total order</small>  
+				    <!--   <small class="block"><b>Earn Shopping Credit:</b> . 50% goes into special trading account that generates a monthly returns for us. We'll share 50% of our profit with you that goes into your wallet as shopping credit that enable you to cover upto 100% of your total order</small>  
                                   
-				      <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
+				       <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
 				       
 				      <a href="/" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Click Here </button></a>  -->
 				            
