--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -20,9 +20,9 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
-				    <!--   <small class="block"><b>Earn Shopping Credit:</b> . 50% goes into special trading account that generates a monthly returns for us. We'll share 50% of our profit with you that goes into your wallet as shopping credit that enable you to cover upto 100% of your total order</small>  
+				     <small class="block"><b>Earn Shopping Credit:</b> Create your free account we'll show you how to earn shopping credit that enable you to get any product for FREE</small>  
                                   
-				       <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
+				   <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
 				       
 				      <a href="/" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Click Here </button></a>  -->
 				            
