--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,14 +13,14 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Purchase A Yearly Membership And We'll Pass On 100% Of Our Commission To Create Even More Discounts</h4>     
+				      <h4>Purchase A Yearly Membership And We'll Pass On 90% Of Our Commission To Create Even More Discounts + Earn Shopping Credit That Enable You To Get Any Product For FREE</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
                                
                             <br> <br>
-				     <small class="block"><b>Earn Shopping Credit:</b> Create your free account we'll show you how to earn shopping credit that enable you to get any product for FREE</small>  
+				    <small class="block"><b>HOW WE MAKE MONEY:</b> Your yearly membership fee goes into special trading account that generates a monthly returns that enable us to covering our overheads and make a profit</small> 
                                   
 				   <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
 				       
