--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -17,15 +17,12 @@
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
-                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup">Yes</button></a>
+                              <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				    <small class="block"><b>HOW WE MAKE MONEY:</b> Your yearly membership fee goes into special trading account that generates a monthly returns that enable us to covering our overheads and make a profit</small> 
+				    <small class="block"><b>HOW WE MAKE MONEY:</b> Your yearly membership fee goes into special trading account that generates a monthly returns that enable us to cover our overheads and make a profit</small> 
                                   
-				   <!-- <small class="block"><b>NOTE:</b> If You Purchase A  You Can Enjoy Members Only Prices + Unlimited FREE Delivery On All Purchases Within That Year</small> 
-				       
-				      <a href="/" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Click Here </button></a>  -->
-				            
+				   
                                </div>
                         </div>
                             </div>              
