--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,7 +13,7 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Purchase A Yearly Membership And We'll Pass On 80% Of Our Commission To Create Even More Discounts + Earn Shopping Credit That Enable You To Get Products For FREE</h4>     
+				      <h4>Purchase A Yearly Membership And We'll Pass On Great Portion Of Our Commission To Create Even More Discounts + Earn Shopping Credit That Enable You To Get Products For FREE</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
