--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -20,7 +20,7 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				    <small class="block"><b>HOW WE MAKE MONEY:</b> Your yearly membership fee goes into special trading account that generates a monthly returns that enable us to cover our overheads and make a profit</small> 
+				    <small class="block"><b>Note:</b> Create your free account on the next page</small> 
                                   
 				   
                                </div>
