--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -20,7 +20,7 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				    <small class="block"><b>Note:</b> Create your free account on the next page</small> 
+				    <small class="block"><b>Coming Soon:</b> Buy Now Pay Later in 3 installments and never pay interest. terms and conditions apply</small> 
                                   
 				   
                                </div>
