--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,7 +13,7 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission To Create Even More Discounts + Earn Shopping Credit That Enable You To Get Products For FREE</h4>     
+				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts </h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
@@ -21,7 +21,7 @@
                                
                             <br> <br>
 				    <small class="block"><b>Coming Soon:</b> Buy Now Pay Later in 4 installments over 6 to 8 weeks and never incurring any interest. terms and conditions apply</small> 
-                                  
+                                 <!-- Earn Shopping Credit That Enable You To Get Products For FREE -->
 				   
                                </div>
                         </div>
