--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,14 +13,14 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts </h4>     
+				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts and Use Our Buy Now Pay Later  To Spread Out Payments</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				    <small class="block"><b>Coming Soon:</b> Buy Now Pay Later in 4 installments over 6 to 8 weeks and never incurring any interest. terms and conditions apply</small> 
+				    <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 4 installments over 6 to 8 weeks and never incurring any interest.</small> 
                                  <!-- Earn Shopping Credit That Enable You To Get Products For FREE -->
 				   
                                </div>
