--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -13,7 +13,7 @@
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
-				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts and Use Our Buy Now Pay Later  To Spread Out Payments</h4>     
+				      <h4>Upgrade Your Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
