--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,9 +7,9 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			   <p style=""><strong>We Use WhatsApp Satus To Display Deals</strong></p>
+			 <!--    <p style=""><strong>We Use WhatsApp Satus To Display Deals</strong></p>
                                 
-				       <h2><strong>Just Pree Our Status Daily</strong></h2>
+				     <h2><strong>Just Pree Our Status Daily</strong></h2>-->
 				       
 				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
 					
