--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,21 +7,20 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			 <!-- <p style=""><strong>We Use WhatsApp Satus To Display Deals</strong></p>
-                                
-				     <h2><strong>Just Pree Our Status Daily</strong></h2> -->
-				       
-				      <h3>Discover Greatly Discounted Deals From Overseas and Local Suppliers That Pay Us Commission On Your Purchase</h3>
+			  
+				       <p style=""><strong>Subscribe To JM Daily Deals Site</strong></p>
+				   
+				      <h3>We Use WhatsApp Satus To Display Deals UpTo 80% Discounts From Overseas and Local Suppliers</h3>
 					
-				      <h4>Join Our Free Membership And We'll Pass On A Portion Of Our Commission In The Form Of Cashback To Create Even More Discounts</h4>     
+				      <h4>Subscribe To Our WhatsApp Satus By Answering The Questions Below</h4>     
 		        
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				    <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 4 installments over 6 to 8 weeks and never incurring any interest.</small> 
-                                 <!-- Earn Shopping Credit That Enable You To Get Products For FREE -->
+				   <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 7 installments over 12 weeks and never incurring any interest.</small> 
+                                 <!--  Earn Shopping Credit That Enable You To Get Products For FREE -->
 				   
                                </div>
                         </div>
