--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -10,7 +10,7 @@
 			  
 				       <p style=""><strong>Subscribe To JM Daily Deals Site</strong></p>
 				   
-				      <h3>We Use WhatsApp Satus To Display Deals UpTo 80% Discounts From Overseas and Local Suppliers</h3>
+				      <h3>We Use WhatsApp Satus To Display Deals UpTo 80% Discounts From Overseas and Local Suppliers, When You Ready To Make A Purchase, Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h3>
 					
 				      <h4>Subscribe To Our WhatsApp Satus By Answering The Questions Below</h4>     
 		        
@@ -19,8 +19,8 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
-				   <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 7 installments over 12 weeks and never incurring any interest.</small> 
-                                 <!--  Earn Shopping Credit That Enable You To Get Products For FREE -->
+				  <!-- <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 7 installments over 12 weeks and never incurring any interest.</small> 
+                                   Earn Shopping Credit That Enable You To Get Products For FREE -->
 				   
                                </div>
                         </div>
