--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -8,12 +8,13 @@
                                  
                                <div class="home-exp">
 			  
-				       <p style=""><strong>Subscribe To JM Daily Deals Site</strong></p>
+				       <p style=""><strong>Subscribe To Allpree.com Daily Deals And Save UpTo 80% Discounts on Clothing, Accessories, Home, Computers, Electronics & So Much More From Overseas Retailers</strong></p>
 				   
-				      <h3>We Use WhatsApp Satus To Display Deals UpTo 80% Discounts From Overseas and Local Suppliers, When You Ready To Make A Purchase, Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h3>
+				      <h3>Deals Are Handpicked From 80+ Retailers Daily By Our Expert Deal-Editors and Displayed On Our WhatsApp Status.</h3>
+				     
+				       <h4> When You Ready To Make A Purchase, Pay Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h4>
 					
-				      <h4>Subscribe To Our WhatsApp Satus By Answering The Questions Below</h4>     
-		        
+				      
 				      <br>
                                            <H4>Have A Referral Code? </4>
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
