--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -8,11 +8,11 @@
                                  
                                <div class="home-exp">
 			  
-				       <p style=""><strong>Subscribe To Allpree.com Daily Deals And Save UpTo 80% Discounts on Clothing, Accessories, Home, Computers, Electronics & So Much More From Overseas Retailers</strong></p>
+				       <p style=""><strong>Subscribe And Save UpTo 80% Discounts</strong></p>
 				   
-				      <h3>Deals Are Handpicked From 80+ Retailers Daily By Our Expert Deal-Editors and Displayed On Our WhatsApp Status.</h3>
+				      <h3>Deals Are Handpicked From 80+ Overseas Retailers Daily By Our Expert Deal-Editors and Displayed On Our WhatsApp Status.</h3>
 				     
-				       <h4> When You Ready To Make A Purchase, Pay Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h4>
+				       <h4>When You Ready To Make A Purchase, Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h4>
 					
 				      
 				      <br>
