--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,8 +7,8 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			  <p style="">Jamaican's Daily Deals</p>
-				       <h3><strong>Get UpTo 80% Discounts</strong></h3>
+			  <p style=""><strong>Jamaican's Daily Deals Site</strong></p>
+				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
 				   
 				      <h3>Deals Are Handpicked From 80+ Overseas Retailers Daily By Our Expert Deal-Editors and Displayed On Our WhatsApp Status.</h3>
 				     
