--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,10 +7,10 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			  <p style=""><strong>Jamaican's Daily Deals Site</strong></p>
+			  <p style=""><strong>Join Jamaica's Biggest Daily Deals On WhatsApp</strong></p>
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
 				   
-				      <h3>Deals Are Handpicked From 80+ Overseas Retailers Daily By Our Expert Deal-Editors and Displayed On Our WhatsApp Status.</h3>
+				      <h3>The Best Deals Are Handpick From 80+ Online Stores By Our Expert Deal-Editors Daily and Displayed On Our WhatsApp Status.</h3>
 				     
 				       <h4>When You Ready To Make A Purchase, Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h4>
 					
