--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -7,12 +7,14 @@
                    <div class="home-right">
                                  
                                <div class="home-exp">
-			  <p style=""><strong>Get Daily Deals On WhatsApp</strong></p>
+			  
+				       <p style=""><strong>Get Daily Deals Via Your WhatsApp Status</strong></p>
+				       
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
-				   
-				      <h3>Deals Are Handpick From Over 80+ Online Stores By Our Deal-Editors and Displayed On Our WhatsApp Status Daily.</h3>
+				    
+				      <h3>Deals Are Handpick From Various Categories By Our Deal-Editors From A List Of Online Stores and Displayed On Our WhatsApp Status Daily.</h3>
 				     
-				       <h4>When You Ready To Make A Purchase, Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks And Never Incurring Any Interest</h4>
+				       <h4>When You Ready To Make A Purchase, Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4>
 					
 				      
 				      <br>
