--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -12,7 +12,7 @@
 				       
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
 				    
-				      <h3>Deals Are Handpick By Our Deal-Editors From A List Of Online Stores and Displayed On Our WhatsApp Status Daily.</h3>
+				      <h3>Deals Are Handpick By Our Deal-Editors From A List Of Overseas Online Stores and Displayed On Our WhatsApp Status Daily.</h3>
 				     
 				       <h4>When You Ready To Make A Purchase, Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4>
 					
