--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -8,7 +8,7 @@
                                  
                                <div class="home-exp">
 			  
-				       <p style=""><strong>Get Daily Deals Via Your WhatsApp Status</strong></p>
+				       <p style=""><strong>View Daily Deals Via Your WhatsApp Status</strong></p>
 				       
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
 				    
