--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -14,7 +14,8 @@
 				    
 				      <h3>Deals Are Handpick By Our Deal-Editors From A List Of Stores In Jamaica & Overseas and Displayed On Our WhatsApp Status Daily.</h3>
 				     
-				       <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4>
+				    <h4> When You Ready To Make A Purchase, Accept Free Member's Price Or Become A Paid Member And Get The Best Deal + FREE Handling & Delivery On All Purchases Within That Year</h4>
+				      <!-- <h4>When You Ready To Make A Purchase, Paid Cash Upfront Or Use Our Buy Now Pay Later Option And Spread Out Payments In 7 Installments Over 12 Weeks That Never Incurring Any Interest</h4> -->
 					
 				      
 				      <br>
