--- a/_includes/homepage.html
+++ b/_includes/homepage.html
@@ -23,6 +23,7 @@
                               <a href="/jm/join" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> No</button></a>    <a href="/jm/join-r" class="page-scroll"><button class="btn btn-outline btn-xl" id="#signup"><i class="fa-solid fa-computer-mouse"></i> Yes</button></a>
                                
                             <br> <br>
+				       <small class="block"><b>NOTE:</b> Purchase A Yearly Membership And Enjoy Unlimited FREE Delivery On All Purchases Within That Year.</small>
 				  <!-- <small class="block"><b>MEMBERS BONUS:</b> Use Our Buy Now Pay Later option and spread out payments in 7 installments over 12 weeks and never incurring any interest.</small> 
                                    Earn Shopping Credit That Enable You To Get Products For FREE -->
 				   
