--- a/_includes/deals.html
+++ b/_includes/deals.html
@@ -205,7 +205,7 @@
                 <div class="col-md-6 home-txt">
                    <div class="home-right"> 
            
-			   <div class="home-exp">
+			   <div class="home-exp"><br><br>
        <p style=""><strong>View Daily Deals Via Your WhatsApp Status</strong></p>
 				       
 				       <h3><strong>Deals UpTo 80% Discounts</strong></h3>
